# ide_core

./: Dockerfile  docker-compose.yml  manage.py  pyproject.toml  sample.env
.github/workflows/: docker.yml
api/: models.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_codefile_title.py
api/serializers/: base.py
ide_core/: asgi.py  config.py  settings.py  wsgi.py
utils/: id_codec.py  id_mapping.py
